SFE: fix scrollbar to prevent frequent canvas resizes

--- a/packages/tools/smartFiltersEditorControl/src/assets/styles/main.scss
+++ b/packages/tools/smartFiltersEditorControl/src/assets/styles/main.scss
@@ -76,12 +76,13 @@
 
         grid-template-columns: 100%;
         height: 100%;
-        overflow-y: auto;
+        overflow: hidden;
     }
 
     #propertyTab {
         grid-row: 1;
         grid-column: 1;
+        overflow: auto;
     }
 
     .button {
